# internet_speedtest

./: README.md  client.csv  cron.txt  pyproject.toml  results.csv  runner.sh  server.csv  speedtest_logger.py
